@@ -319,7 +319,7 @@ define([
         ['action','button-view']
       );
       var that = this;
-      btn.add(loc.MINIMIZE, ['button-icon','minimize'], function () {
+      btn.add(loc.MINIMIZE, {'cls':['button-icon','minimize']}, function () {
         that.minimize();
       });
       this._element.appendChild(btn.element());
